# 222

./: .gitignore  111.py  222.py  AGENTS.md  PSO.py  README.md  Train.py  Train.spec  Train_PSO.py  base.py  dahfdjklashfidshfiuhaiouewhfas  espnet_model  jqxx.py  main.py  optimized_params.csv  pso_results.csv  test_clin.csv  testnew_all_data.csv  testnew_clin_data.csv  testnew_mri_data.csv  train_clin.csv  trainnew_all_data.csv  trainnew_clin_data.csv  trainnew_mri_data.csv  评估模块.md
Models/: AbstactModel.py  AttentionTrans.py  FeatureTrans.py  GBN.py  GLU.py  TabNet.py  TabNetClassification.py  sparsemax.py
Utils/: Augmentations.py  Callbacks.py  Check.py  Dataloader.py  Embedding.py  Explain.py  Generate_group.py  Metrics.py  MultiClass.py
aaaa/: main.py  output_example.json  评估模块.md
data_eval_pipeline/: .env.example  pyproject.toml
data_eval_pipeline/data/cache/demo_case/: batch_0003.json  batch_0004.json  batch_0005.json  batch_0007.json
data_eval_pipeline/data/cache/sample_0/: batch_0001.json  batch_0004.json  batch_0007.json  batch_0008.json  full_text.txt
data_eval_pipeline/data/datasets/: sample_0.jsonl
data_eval_pipeline/data/datasets_evaluation/: sample_0.jsonl
data_eval_pipeline/data/documents/: demo_case.json
data_eval_pipeline/data/tools/: all_tools.json
data_eval_pipeline/graph/: pipeline_eval.py
data_eval_pipeline/graph/evaluation/: cot_evaluator.py
data_eval_pipeline/prompts/: factual_consistency_evaluation.jinja  tool_causality_evaluation.jinja
data_eval_pipeline/store/: cache_store.py
graph/: pipeline.py  pipeline_ocr.py
(+41 files in other folders)
