[project]
name = "data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ai-prompter>=0.3.1",
    "langchain>=1.2.0",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "pdf2image>=1.17.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
